<resources>
    <string name="app_name">StudentAttendanceApp</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Courses</string>
    <string name="nav_photos">Time Table</string>
    <string name="nav_movies">Assignment</string>
    <string name="nav_notifications">Attendance</string>
    <string name="nav_settings">Profile </string>
    <string name="nav_about_us">About Us</string>
    <string name="download"><u>Click Here To Download</u></string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="activity_title_about_us">About Us</string>

    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_home">Home</string>
    <string name="nav_result">Result</string>
    <string name="nav_fees">Pay Fees</string>
    <string name="nav_chat">Chat</string>
    <string-array name="nav_item_activity_titles">
        <item>Courses</item>
        <item>Time Table</item>
        <item>Assignment</item>
        <item>Attendance</item>
        <item>Profile</item>
        <item>Result</item>
        <item>Chat</item>

        <!--        <item>Pay Fees</item>-->

        <!--        <item>Settings</item>-->
    </string-array>


</resources>
